--- a/index_HW_5.html
+++ b/index_HW_5.html
@@ -36,7 +36,7 @@
 
     <section class="about_me_section">
       <div class="container">
-        <h1>About me</h1>
+        <h1 class="about_me_title">About me</h1>
         <div class="text_holder">
           <p>
             Hi, i'm Denis - UX/UI designer from Minsk. I'm interested in design
@@ -57,36 +57,69 @@
       <p class="skills_text">I work in such programs as</p>
       <ul class="skills_list">
         <li class="skills_item">
-          <img src="images/Skill_Ps_group.png" alt="Ps-Skill" />
+          <img src="images/Skill_Ps.png" alt="Ps-Skill" class="skills_logo" />
+          <p class="skills_undertext">
+            Adobe <br />
+            Photoshop
+          </p>
+          <img src="images/Stars_4.png" alt="Stars_4" class="skills_rate" />
         </li>
         <li class="skills_item">
-          <img src="images/Skill_Ai_group.png" alt="Ai-skill" />
+          <img src="images/Skill_Ai.png" alt="Ai-skill" class="skills_logo" />
+          <p class="skills_undertext">
+            Adobe <br />
+            Illustrator
+          </p>
+          <img src="images/Stars_3.png" alt="Stars_3" class="skills_rate" />
         </li>
         <li class="skills_item">
-          <img src="images/Skill_Ae_group.png" alt="Ae-Skill" />
+          <img src="images/Skill_Ae.png" alt="Ae-Skill" class="skills_logo" />
+          <p class="skills_undertext">Adobe <br />After Effects</p>
+          <img src="images/Stars_4.png" alt="Stars_4" class="skills_rate" />
         </li>
         <li class="skills_item">
-          <img src="images/Skill_Figma_group.png" alt="Figma-Skill" />
+          <img
+            src="images/Skill_Figma.png"
+            alt="Figma-Skill"
+            class="skills_logo"
+          />
+          <p class="skills_undertext_figma">Figma <br /></p>
+          <img src="images/Stars_4.png" alt="Stars_4" class="skills_rate" />
         </li>
       </ul>
     </section>
 
     <section class="portfolio_section">
       <div class="container">
-        <h1>Portfolio</h1>
-        <ul>
-          <li>
-            <img
-              src="images/Portfolio_Woman.png"
-              alt="Portfolio_1"
-              class="portfolio_photo"
-            />
-            <p>Online fashion store - Homepage</p>
+        <h1 class="portfolio_title">Portfolio</h1>
+        <ul class="portfolio_list">
+          <li class="portfolio_photo">
+            <div>
+              <img src="images/Portfolio_Woman.png" alt="Portfolio_Woman" />
+            </div>
+            <p class="portfolio_undertext">
+              Online fashion store -<br />
+              Homepage
+            </p>
           </li>
-          <li></li>
-          <li></li>
+          <li class="portfolio_photo">
+            <div>
+              <img src="images/Portfolio_Reebok.png" alt="Portfolio_Reebok" />
+            </div>
+            <p class="portfolio_undertext">Reebok Store - Concept</p>
+          </li>
+          <li class="portfolio_photo_last">
+            <div>
+              <img src="images/Portfolio_Braun.png" alt="Portfolio_Braun" />
+            </div>
+            <p class="portfolio_undertext">Braun Landing Page - Concept</p>
+          </li>
         </ul>
       </div>
     </section>
+
+    <footer>
+      <p>Footer</p>
+    </footer>
   </body>
 </html>
